--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/Users/fossilshunter/git-chall/refactor/assets/css/style.css" />
+    <link rel="stylesheet" href="/Users/fossilshunter/git-chall/refactor/assets/css/style.css">
     <title>Horiseon Refactored</title>
 </head>
 
